# dif

./: Cargo.toml  README.md  example.dif
difi/: Cargo.toml
difi/src/: lib.rs
src/: fields.rs  get.rs  lib.rs  parse.rs
tests/: Cargo.toml
tests/src/: lib.rs
